# vaporization

./: Cargo.toml  shell.nix  wasm_shell.nix
assets/glb/: ram.glb  sheep.glb  skull.glb
assets/models/: funnyboy.mtl  ram.mtl  sheep.mtl
src/: lib.rs  main.rs
