[package]
name = "vaporization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_gltf = "0.13.2"
bevy_ui = "0.13.2"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "console",
]


[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

